# Park_C_plusplus

./: .travis.yml  CMakeLists.txt  IZN1.c  IZN1.cpp  IZN1.h  IZN2.c  IZN2.h  IZN2.md  IZN2parall.h  README.md  a.out  func.c  func.h  func2.c  func2lin.c  main.out  text.txt
Gtest/: CMakeLists.txt  IZN1_test.cpp  test.cpp
Gtest/googletest-master/ci/: travis.sh
